# plugin-absorption-correction

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  run.py  setup.cfg
notebooks/: demo (compare-intensity).ipynb  demo (compare-transformers).ipynb  demo (estimate-approximation-error).ipynb  demo.ipynb
src/plugin/: __init__.py  exceptions.py  loggers.py  plugin.py
src/plugin/config/: plugin_config.py
src/plugin/core/: tools.py
src/plugin/dto/: __init__.py  data.py
src/plugin/managers/correction_manager/: __init__.py  core.py  correction_manager.py  exceptions.py
src/plugin/managers/data_manager/: data_manager.py  exceptions.py
src/plugin/managers/data_manager/parsers/: __init__.py  atom_data_parser.py  atom_meta_parser.py  atom_table_parser.py  filepath_parser.py
src/plugin/managers/report_manager/: report_manager.py
src/plugin/presentation/: __init__.py  app.py
src/plugin/presentation/windows/: __init__.py  preview_window.py
tests/: conftest.py
tests/ini/GRAND2_I/: Ag 338.289.ini
tests/integration_tests/: conftest.py  test_plugin.py
