[project]
name = "plugin"
version = "0.4.1"
description = "Atom's plugin to process absorption signals."
readme = "README.md"
keywords = [
    "spectroscopy",
    "atomic absorbtion spectroscopy",
    "linear detector",
]
authors = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
maintainers = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
license = {text = "MIT License"}
dependencies = [
    "spectrumapp",
    "spectrumlab",
]
requires-python = ">=3.12"

[dependency-groups]
linting = [
    "flake8",
    "flake8-commas",
    "flake8-import-order",
    "flake8-bugbear",
    "flake8-builtins",
    "pep8-naming",
]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-faker>=2.0.0",
    "pytest-qt>=4.5.0",
]
notebook = [
    "jupyter>=1.1.1",
    "plotly>=6.5.0",
]
dev = [
    {include-group = "linting"},
    {include-group = "testing"},
    {include-group = "notebook"},
    "spectrumlab_emulations",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.md", "*.txt", "*.xml"]

[tool.uv.sources]
spectrumapp = { git = "https://github.com/Exinker/spectrumapp", rev = "1.1.1" }
spectrumlab = { git = "https://github.com/Exinker/spectrumlab", rev = "0.9.0" }
spectrumlab_emulations = { git = "https://github.com/Exinker/spectrumlab-emulations", rev = "0.1.2" }
